--- a/assignment1.html
+++ b/assignment1.html
@@ -3,14 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Temperature</title>
+    <title>Funny Story</title>
 </head>
 <body>
-    <h1>My 1st JS Lesson</h1>
-
-
-
-
-    <script src="script.js"></script>
+    <h1>Funny Story</h1>
+    <script src="assignment1.js"></script>
 </body>
 </html>
