--- a/assignment1.html
+++ b/assignment1.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Funny Story</h1>
-    <script src="assignment1.js"></script>
+    <script src="./scripts/assignment1.js"></script>
 </body>
 </html>
